2007-05-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPUserManager.m ([LDAPUserManager
	-getFullEmailForUID:uid]): new method that returns the username +
	email pair.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent +initialize]): the default language for
	mail templates is now set to English.

	* UI/SOGoUI/SOGoACLFrenchRemovalAdvisory.[hm]: new subclass of
	SOGoACLAdvisory implementing the french template for user removal
	from acls.

	* UI/SOGoUI/SOGoACLFrenchAdditionAdvisory.[hm]: new subclass of
	SOGoACLAdvisory implementing the french template for user
	additions to acls.

	* UI/SOGoUI/SOGoACLEnglishRemovalAdvisory.[hm]: new subclass of
	SOGoACLAdvisory implementing the english template for user removal
	from acls.

	* UI/SOGoUI/SOGoACLEnglishAdditionAdvisory.[hm]: new subclass of
	SOGoACLAdvisory implementing the english template for user
	additions to acls.

	* UI/SOGoUI/SOGoACLAdvisory.[hm]: new class module implemented the
	supercall of all the acl advistory templates. The model is based
	on SOGoAptMailNotification except that the template encapsulates
	the message to be sent. Later, we might create a superclass common
	to all template-based emails.

	* SoObjects/SOGo/NSArray+Utilities.m ([NSMutableArray
	-addRange:newRange]): new method that store a string
	representation of the NSRange passed as parameter.
	([NSMutableArray -hasRangeIntersection:testRange]): tests whether
	any range contained in self intersect with the one passed as parameter.

	* SoObjects/SOGo/NSString+Utilities.m ([-stringByDetectingURLs]):
	store ranges in an array to prevent them from intersecting with
	each other during the passes.

2007-05-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-primaryFetchMailboxInfo]): useless method. Removed.

2007-05-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder