@@ -1,5 +1,8 @@
 2007-05-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/SOGo/SOGoContentObject.m
+	([-hasSupportForDefaultRoles]): removed method.
+
 	* SoObjects/SOGo/LDAPUserManager.m ([LDAPUserManager
 	-getFullEmailForUID:uid]): new method that returns the username +
 	email pair.
